# s21_3DViewer_v1.0

src/: Makefile
src/core/: main.c  main.h  other.c  parser.c  tests.c
src/gui/: CMakeLists.txt  appwindow.cpp  appwindow.h  appwindow.ui  main.cpp  openglwidget.cpp  openglwidget.h
